Salesforce_integration/objects/Cardtapp_Tapper__c.object
<CustomObject>
    <fields>
        <fullName>Member_email__c</fullName>
        <label>Member email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_external_ID__c</fullName>
        <label>Member external ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_name__c</fullName>
        <label>Member name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_subdomain__c</fullName>
        <label>Member subdomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_vertical_code__c</fullName>
        <label>Member vertical code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_vertical_name__c</fullName>
        <label>Member vertical name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Ambiguous_lead_contact_found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify - Ambiguous lead/contact found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Existing_Contact_found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify - Existing Contact found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_existing_lead_found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify - Existing Lead found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_new_contact_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify - New Contact created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_new_lead_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify - New Lead created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer_name__c</fullName>
        <label>Referrer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_status__c</fullName>
        <label>Referrer status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contact_URL__c</fullName>
        <formula>IF (
   LEFT( Salesforce_Contact__c ,3) = &apos;003&apos;,
   &apos;https://login.salesforce.com/&apos; + Salesforce_Contact__c ,
   &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Contact URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cardtapp Tappers</relationshipLabel>
        <relationshipName>Cardtapp_Tappers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Lead_URL__c</fullName>
        <formula>IF (
   LEFT( Salesforce_Lead__c ,3) = &apos;00Q&apos;,
   &apos;https://login.salesforce.com/&apos; + Salesforce_Lead__c,
   &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Lead URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cardtapp Tappers</relationshipLabel>
        <relationshipName>Cardtapp_Tappers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cardtapp_Tappers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppress_triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tapper_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Tapper External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tapper_FirstName__c</fullName>
        <label>Tapper FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_LastName__c</fullName>
        <label>Tapper LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_Name__c</fullName>
        <label>Tapper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_Status__c</fullName>
        <label>Tapper Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_email__c</fullName>
        <label>Tapper email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_phone_number__c</fullName>
        <label>Tapper phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Workflow_action__c</fullName>
        <label>Workflow action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Cardtapp_App_Events__c</fullName>
        <label># of Cardtapp App Events</label>
        <summaryForeignKey>Cardtapp_App_Event__c.Cardtapp_Tapper__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cardtapp Tapper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Tapper_External_Id__c</columns>
        <columns>Tapper_Name__c</columns>
        <columns>Member_name__c</columns>
        <columns>of_Cardtapp_App_Events__c</columns>
        <columns>Salesforce_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTT-{0000}</displayFormat>
        <label>Tapper Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cardtapp Tappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>